--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
 
   <main>
-    <h2>📊 Round 1 Results</h2>
+    <h2>Round 1 Results   21JUN2025</h2>
     <div id="results-table">Loading results...</div>
   </main>
 
