Modernize site with theme toggle and sortable table

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <title>Shitbox Shakedown</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
+    <button id="theme-toggle" aria-label="Toggle color theme">Light Mode</button>
     <img src="logo.png" alt="Shitbox Shakedown Logo" id="logo">
     <h1>Shitbox Shakedown</h1>
     <p class="tagline">If it starts, it races. Full send. No refunds.</p>
@@ -23,5 +27,6 @@
   </footer>
 
   <script src="js/render-results.js"></script>
+  <script src="js/site.js"></script>
 </body>
 </html>
