--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
   <meta charset="UTF-8">
-  <title>Shitbox Shakedown</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Shitbox Shakedown</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <header>
-    <button id="theme-toggle" aria-label="Toggle color theme">Light Mode</button>
-    <img src="logo.png" alt="Shitbox Shakedown Logo" id="logo">
-    <h1>Shitbox Shakedown</h1>
-    <p class="tagline">If it starts, it races. Full send. No refunds.</p>
+<body class="d-flex flex-column min-vh-100">
+  <header class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-danger">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center" href="#">
+        <img src="logo.png" alt="Shitbox Shakedown Logo" id="logo" class="me-2">
+        <span>Shitbox Shakedown</span>
+      </a>
+      <button id="theme-toggle" class="btn btn-danger ms-auto" aria-label="Toggle color theme">Light Mode</button>
+    </div>
   </header>
-
-  <main>
-    <h2>Round 1 Results   21JUN2025</h2>
-    <div id="results-table">Loading results...</div>
+  <main class="flex-grow-1 py-4">
+    <div class="container text-center">
+      <h2 class="mb-4">Round 1 Results <small class="text-muted">21JUN2025</small></h2>
+      <div class="mb-3">
+        <input type="text" id="search" class="form-control" placeholder="Filter by driver...">
+      </div>
+      <div id="results-table" class="table-responsive">Loading results...</div>
+    </div>
   </main>
-
-  <footer>
-    <p>© 2025 Shitbox Shakedown. Built with blood, duct tape, and HTML.</p>
+  <footer class="bg-dark text-secondary text-center py-3 mt-auto">
+    <div class="container">
+      <p class="mb-0">© 2025 Shitbox Shakedown. Built with blood, duct tape, and HTML.</p>
+    </div>
   </footer>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/render-results.js"></script>
   <script src="js/site.js"></script>
 </body>
