--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <title>Shitbox Shakedown</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="d-flex flex-column min-vh-100">
@@ -20,12 +21,15 @@
       <button id="theme-toggle" class="btn btn-danger ms-auto" aria-label="Toggle color theme">Light Mode</button>
     </div>
   </header>
+  <section class="hero text-center text-white py-5">
+    <div class="container">
+      <h1 class="display-4 fw-bold">Shitbox Shakedown Rally League</h1>
+      <p class="lead">Official Leaderboard</p>
+    </div>
+  </section>
   <main class="flex-grow-1 py-4">
     <div class="container text-center">
       <h2 class="mb-4">Round 1 Results <small class="text-muted">21JUN2025</small></h2>
-      <div class="mb-3">
-        <input type="text" id="search" class="form-control" placeholder="Filter by driver...">
-      </div>
       <div id="results-table" class="table-responsive">Loading results...</div>
     </div>
   </main>
@@ -34,7 +38,10 @@
       <p class="mb-0">© 2025 Shitbox Shakedown. Built with blood, duct tape, and HTML.</p>
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
   <script src="js/render-results.js"></script>
   <script src="js/site.js"></script>
 </body>
