--- a/index.html
+++ b/index.html
@@ -6,26 +6,24 @@
   <title>Shitbox Shakedown</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="d-flex flex-column min-vh-100">
-  <header class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-danger">
+  <header class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-primary">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="logo.png" alt="Shitbox Shakedown Logo" id="logo" class="me-2">
+      <a class="navbar-brand d-flex flex-column align-items-center mx-auto text-center" href="#">
+        <img src="logo.png" alt="Shitbox Shakedown Logo" id="logo" class="mb-1">
         <span>Shitbox Shakedown</span>
       </a>
-      <button id="theme-toggle" class="btn btn-danger ms-auto" aria-label="Toggle color theme">Light Mode</button>
     </div>
   </header>
-  <main class="flex-grow-1 py-4">
+  <main class="flex-grow-1 py-5">
     <div class="container text-center">
+      <h1 class="display-5 fw-bold mb-3">Shitbox Shakedown Rally League</h1>
       <h2 class="mb-4">Round 1 Results <small class="text-muted">21JUN2025</small></h2>
-      <div class="mb-3">
-        <input type="text" id="search" class="form-control" placeholder="Filter by driver...">
-      </div>
       <div id="results-table" class="table-responsive">Loading results...</div>
     </div>
   </main>
@@ -34,8 +32,10 @@
       <p class="mb-0">© 2025 Shitbox Shakedown. Built with blood, duct tape, and HTML.</p>
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
   <script src="js/render-results.js"></script>
-  <script src="js/site.js"></script>
 </body>
 </html>
