--- a/index.html
+++ b/index.html
@@ -38,12 +38,114 @@
             <div><sup>1</sup> Returned with an extra tire on the rims, somehow.</div>
             <div><sup>2</sup> Run started facing the wrong way and in reverse. Won on style.</div>
           </div>
+          <!-- Photo Gallery Start -->
+          <div id="photo-gallery" class="mt-5">
+            <h3 class="mb-4 text-center" style="color:#00b4d8;font-weight:600;letter-spacing:0.04em;">Race Day Photo Reel</h3>
+            <div class="row g-3 justify-content-center">
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250620_184843.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250620_184843.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 1"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_075647.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_075647.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 2"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_111442.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_111442.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 3"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_123949.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_123949.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 4"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_130800.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_130800.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 5"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_130812.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_130812.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 6"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_131633.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_131633.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 7"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_132041.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_132041.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 8"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_134653.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_134653.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 9"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_135541.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_135541.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 10"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_135603.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_135603.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 11"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_140043.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_140043.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 12"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_140833.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_140833.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 13"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_140839.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_140839.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 14"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_140840.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_140840.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 15"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_141304.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_141304.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 16"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_154637.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_154637.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 17"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_174035.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_174035.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 18"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_174259.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_174259.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 19"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_174304.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_174304.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 20"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_174305.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_174305.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 21"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/20250621_180150.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/20250621_180150.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 22"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/file_000000000f5061f797258c39b2f2f82c.png" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/file_000000000f5061f797258c39b2f2f82c.png" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 23"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/file_000000000f5061f797258c39b2f2f82c0001.png" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/file_000000000f5061f797258c39b2f2f82c0001.png" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 24"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/IMG_20250623_152455.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/IMG_20250623_152455.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 25"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/IMG_20250623_214249.jpg" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/IMG_20250623_214249.jpg" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 26"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/Screenshot_20250623-110727.png" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/Screenshot_20250623-110727.png" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 27"></a>
+              </div>
+              <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                <a href="photo_reel/Screenshot_20250623-110952.png" data-bs-toggle="modal" data-bs-target="#galleryModal"><img src="photo_reel/Screenshot_20250623-110952.png" class="img-fluid rounded shadow-sm gallery-thumb" alt="Race photo 28"></a>
+              </div>
+            </div>
+          </div>
+          <!-- Photo Gallery End -->
         </div>
       </div>
       <!-- Feedback FAB removed -->
     </div>
     <!-- Feedback Modal removed -->
   </main>
+  <!-- Gallery Modal -->
+  <div class="modal fade" id="galleryModal" tabindex="-1" aria-labelledby="galleryModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content bg-dark border-0">
+        <div class="modal-body p-0">
+          <img id="galleryModalImg" src="" class="img-fluid w-100 rounded" alt="Large race photo">
+        </div>
+      </div>
+    </div>
+  </div>
+
   <footer class="bg-dark text-secondary text-center py-3 mt-auto glass-footer">
     <div class="container">
       <p class="mb-0">© 2025 Shitbox Shakedown. Built with blood, duct tape, and HTML.</p>
@@ -55,6 +157,20 @@
   <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
   <script src="js/render-results.js"></script>
+  <script>
+    // Gallery modal logic
+    document.addEventListener('DOMContentLoaded', function() {
+      document.querySelectorAll('.gallery-thumb').forEach(function(img) {
+        img.parentElement.addEventListener('click', function(e) {
+          e.preventDefault();
+          var modalImg = document.getElementById('galleryModalImg');
+          modalImg.src = img.src;
+          var modal = new bootstrap.Modal(document.getElementById('galleryModal'));
+          modal.show();
+        });
+      });
+    });
+  </script>
   <script>
     // Add tooltips and show footnotes for special symbols in the results table after table is rendered
     document.addEventListener('DOMContentLoaded', function() {
