--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             <div><sup>1</sup> Returned with an extra tire on the rims, somehow.</div>
             <div><sup>2</sup> Run started facing the wrong way and in reverse. Won on style.</div>
           </div>
+          <!-- Section Divider -->
+          <div class="gallery-divider my-5 d-flex align-items-center justify-content-center">
+            <hr class="flex-grow-1 mx-2" style="border-top:2.5px solid #00b4d8;opacity:0.7;">
+            <span class="mx-3 text-uppercase fw-bold text-info" style="letter-spacing:0.12em;font-size:1.08em;">Race Day Gallery</span>
+            <hr class="flex-grow-1 mx-2" style="border-top:2.5px solid #00b4d8;opacity:0.7;">
+          </div>
           <!-- Photo Gallery Start -->
           <div id="photo-gallery" class="mt-5">
             <h3 class="mb-4 text-center" style="color:#00b4d8;font-weight:600;letter-spacing:0.04em;">Race Day Photo Reel</h3>
