--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           </div>
           <!-- Section Divider -->
           <div class="gallery-divider my-5 d-flex align-items-center justify-content-center">
-            <hr class="flex-grow-1 mx-2" style="border-top:2.5px solid #00b4d8;opacity:0.7;">
-            <span class="mx-3 text-uppercase fw-bold text-info" style="letter-spacing:0.12em;font-size:1.5em;">Race Day Gallery</span>
-            <hr class="flex-grow-1 mx-2" style="border-top:2.5px solid #00b4d8;opacity:0.7;">
+            <hr class="flex-grow-1 mx-2 align-items-center justify-content-center" style="border-top:2.5px solid #00b4d8;opacity:0.7;">
+            <span class="mx-3 text-uppercase fw-bold text-info align-items-center justify-content-center" style="letter-spacing:0.12em;font-size:1.5em;">Race Day Gallery</span>
+            <hr class="flex-grow-1 mx-2 align-items-center justify-content-center" style="border-top:2.5px solid #00b4d8;opacity:0.7;">
           </div>
           <!-- Photo Gallery Start -->
           <div id="photo-gallery" class="mt-5">
